@@ -82,7 +82,7 @@ COM_TEMPLATES_TEMPLATE_EDIT_MAIN="Edit main page template"
 COM_TEMPLATES_TEMPLATE_EDIT_PRINTVIEW="Edit print view template"
 COM_TEMPLATES_TEMPLATE_FILENAME="Editing file "_QQ_"%s"_QQ_" in template "_QQ_"%s"_QQ_"."
 COM_TEMPLATES_TEMPLATE_MASTER_FILES="Template Master Files"
-COM_TEMPLATES_TEMPLATE_NO_PREVIEW="No preview available"
+COM_TEMPLATES_TEMPLATE_NO_PREVIEW="No preview available. You can enable this option in the preferences."
 COM_TEMPLATES_TEMPLATE_NO_PREVIEW_ADMIN="No preview available for Administrator templates"
 COM_TEMPLATES_TEMPLATE_NO_PREVIEW_DESC="To enable template previews, enable the Preview Module Positions option in Template Options"
 COM_TEMPLATES_TEMPLATE_NOT_SPECIFIED="Template not specified."
